--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="app.js" defer></script>
   </head>
   <body>
