--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="manifest" href="manifest.json" />
@@ -8,10 +9,6 @@
   <body>
     <div>
       <button onclick="Notification.requestPermission()">Request notification permission</button>
-    </div>
-    <div>
-      <input type="number" value="5" id="delay_seconds" />
-      <button onclick="notify()">Notify</button>
     </div>
     <div>
       <p id="running_state_display">Paused</p>
